# oronyx

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  toolchain.cmake
.github/workflows/: build.yml
arch/aarch64/: CMakeLists.txt  linker.ld
arch/aarch64/include/: cpu_impl.hpp
arch/aarch64/src/: cpu_impl.cpp
arch/x86_64/: CMakeLists.txt  linker.ld
arch/x86_64/include/: cpu_impl.hpp  gdt.hpp  idt.hpp  io_impl.hpp  mem_impl.hpp  paging_impl.hpp
arch/x86_64/src/: cpu_impl.cpp  gdt.cpp  idt.cpp  io_impl.cpp  mem_impl.cpp
boot/: limine.conf
cmake/: toolchain.cmake
display/: CMakeLists.txt
drivers/: CMakeLists.txt  graphics.cpp  keyboard.cpp  textmode.cpp
fs/: CMakeLists.txt
include/boot/: init.hpp
include/ornyx/: textmode.hpp
include/ornyx/arch/: cpu.hpp  io.hpp  mem.hpp  paging.hpp
include/ornyx/drivers/: graphics.hpp  keyboard.hpp
include/ornyx/mm/: pmm.hpp
include/oronyx/arch/: cpu.hpp  io.hpp  mem.hpp
include/oronyx/data/: fonts.hpp
include/oronyx/drivers/: graphics.hpp
include/oronyx/mm/: pmm.hpp
kernel/: CMakeLists.txt  main.cpp
kernel/src/: init.cpp
libk/: CMakeLists.txt
libk/include/: atomic.hpp  ctypes.hpp  iostream.hpp  type_traits.hpp  types.hpp
libk/src/: __cxxrt.cpp  ctypes.cpp  iostream.cpp
mm/: CMakeLists.txt  pmm.cpp
